# servant-bazaar

./: LICENSE  README.md  servant-bazaar.cabal  stack.yaml
src/Servant/: Bazaar.hs
src/Servant/Bazaar/: Client.hs  Server.hs  Swagger.hs
