name:           servant-bazaar
version:        0.1
build-type:     Simple
cabal-version:  >= 1.10

flag with-servant-server
  description: support for servant-server
  manual: True
  default: False

flag with-servant-client
  description: support for servant-client
  manual: True
  default: False

flag with-servant-swagger
  description: support for servant-swagger
  manual: True
  default: False

library
  hs-source-dirs:
      src
  build-depends:
      base
    , servant == 0.7.1.*
  if flag(with-servant-server)
    build-depends:
        servant-server == 0.7.1.*
    exposed-modules:
        Servant.Bazaar.Server
  if flag(with-servant-client)
    build-depends:
        servant-client == 0.7.1.*
    exposed-modules:
        Servant.Bazaar.Client
  if flag(with-servant-swagger)
    build-depends:
        servant-swagger == 1.0.3.*
    exposed-modules:
        Servant.Bazaar.Swagger
  exposed-modules:
      Servant.Bazaar
  default-language: Haskell2010
